scripts/cpfs/installer_scripts/cp3-networkpolicy/egress/license-service-reporter-manually/ibm-license-service-reporter-operator-k8s-cncf-egress.yaml
###
# DEFAULT KUBERNETES SERVICE:
# > kubectl describe service kubernetes
###

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ibm-license-service-reporter-operator-kubernetes-api-egress
  namespace: ibm-licensing-namespace
spec:
  podSelector:
    matchLabels:
      name: ibm-license-service-reporter-operator
  egress:
    - ports:
        - protocol: TCP
          port: <$TargetPort> # TargetPort from the DEFAULT KUBERNETES SERVICE
      to:
        - ipBlock:
            cidr: <IPs>/32 # IPs from the DEFAULT KUBERNETES SERVICE
  policyTypes:
    - Egress
